Adding libaray to layout and fixing several minor visual layout bugs

--- a/web/index.html
+++ b/web/index.html
@@ -43,8 +43,9 @@
   </div>
 
   <div class="hand-container">
-    <h3>Hand</h3>
+    <h3>Hand & Library</h3>
     <div id="hand"></div>
+    <div id="library"></div>
   </div>
 
   <script src="app.js"></script>
