Added the ability to have more than one player.

--- a/web/index.html
+++ b/web/index.html
@@ -31,8 +31,12 @@
       <span id="phase">Unknown</span>
     </div>
     <div class="info-item">
-      <label>Life:</label>
-      <span id="life">20</span>
+      <label>Current Player:</label>
+      <span id="currentPlayer">0</span>
+    </div>
+    <div class="info-item">
+      <label>Players Health:</label>
+      <span id="playersHealth">Loading...</span>
     </div>
     <div class="info-item">
       <label>Turns:</label>
